[package]
name = "phlr"
version = "0.1.2"
authors = ["Arthurdw <mail.arthurdw@gmail.com>"]
edition = "2018"
description = "Generate a hashed dataset from a dataset"
readme = "README.md"

[dependencies]
clap = "2.33.3"
termion = "1.5.5"
sha2 = "0.9.2"
reqwest = {version="0.10.10", features = ["blocking"]}
