[package]
name = "phlr"
version = "0.1.2"
authors = ["Arthurdw <mail.arthurdw@gmail.com>"]
edition = "2018"
description = "Generate a hashed dataset from a dataset"
readme = "README.md"

[dependencies]
clap = "2.33.3"
termion = "1.5.6"
sha2 = "0.9.3"
reqwest = {version="0.11.1", features = ["blocking"]}
